--- a/.golangci.yml
+++ b/.golangci.yml
@@ -112,6 +112,7 @@ linters-settings:
         allow:
           - $gostd
           - github.com/nats-io/nats.go
+          - github.com/crypto-bundle/
           - go.uber.org/zap
 
 issues:
@@ -123,9 +124,14 @@ issues:
 linters:
   # Disable all linters.
   # Default: false
-  disable-all: true
+  # disable-all: true
   # Enable specific linter
   # https://golangci-lint.run/usage/linters/#enabled-by-default
+  disable:
+    - gofumpt
+    - execinquery
+    - interfacebloat
+    - tagalign
   enable:
     - asasalint
     - asciicheck
@@ -147,7 +153,6 @@ linters:
     - errchkjson
     - errname
     - errorlint
-#    - execinquery
     - exhaustive
     - exhaustruct
     - exportloopref
@@ -168,7 +173,6 @@ linters:
     - godot
     - godox
     - gofmt
-#    - gofumpt
     - goheader
     - goimports
     - gomoddirectives
@@ -182,7 +186,6 @@ linters:
     - importas
     - inamedparam
     - ineffassign
-#    - interfacebloat
     - intrange
     - ireturn
     - lll
@@ -216,7 +219,6 @@ linters:
     - sqlclosecheck
     - staticcheck
     - stylecheck
-    - tagalign
     - tagliatelle
     - tenv
     - testableexamples
