--- a/.golangci.yml
+++ b/.golangci.yml
@@ -58,6 +58,14 @@ output:
   uniq-by-line: true
 
 linters-settings:
+  mnd:
+    checks:
+      - argument
+      - case
+      - condition
+      - return
+      - assign
+
   wsl:
     force-short-decl-cuddling: false
     force-err-cuddling: true
@@ -70,14 +78,14 @@ linters-settings:
     # Default: ["standard", "default"]
     sections:
       - standard # Standard section: captures all standard packages.
+      - alias # Alias section: contains all alias imports. This section is not present unless explicitly enabled.
+      - localmodule # Local module section: contains all local packages. This section is not present unless explicitly enabled.
       - default # Default section: contains all imports that could not be matched to another section type.
       - blank # Blank section: contains all blank imports. This section is not present unless explicitly enabled.
       - dot # Dot section: contains all dot imports. This section is not present unless explicitly enabled.
-      - alias # Alias section: contains all alias imports. This section is not present unless explicitly enabled.
 #      - prefix(github.com/org/project) # Custom section: groups all imports with the specified Prefix.
-      - localmodule # Local module section: contains all local packages. This section is not present unless explicitly enabled.
     skip-generated: true
-    custom-order: false
+    custom-order: true
 
   revive:
     rules:
