chore:crypto-bundle/CBDL#7.added support of new lib-errors version - ErrorNoWrap method

--- a/.golangci.yml
+++ b/.golangci.yml
@@ -104,6 +104,8 @@ linters-settings:
       - .WithMessagef(
       - .WithStack(
       # bc-wallet-common-lib-errors
+      - .ErrorNoWrap
+      - .ErrNoWrap
       - .Errorf(
       - .ErrorOnly(
       - .Error(
